tests/compile_fail/try_from/invalid_repr.stderr
error: expected `,`
 --> tests/compile_fail/try_from/invalid_repr.rs:3:10
  |
3 | #[repr(a + b)]
  |          ^

error: expected one of `(`, `,`, `::`, or `=`, found `+`
 --> tests/compile_fail/try_from/invalid_repr.rs:3:10
  |
3 | #[repr(a + b)]
  |          ^ expected one of `(`, `,`, `::`, or `=`
